# blazon-language

./: .gitignore  README.md  blazon_as_pseudocode.txt  const.py  image_credits.txt  main.py  pyproject.toml
blazon_language/: cli.py  main.py
blazon_language/language/: _parser.py  blazon.ebnf  blazon_list.py  field.py
blazon_language/language/divisions/: bend.py  blazon.py  (+16 more)
blazon_language/presets/: default_output_config.json  preset_flag_collections.py  preset_flag_views.py
blazon_language/rendering/: _image_management.py  _render_config.py  draw_blazon.py  draw_blazon_list.py  draw_division.py  draw_dof.py
language/: _evaluation.py  _parser.py  blazon.ebnf  blazon.py  blazon_list.py  evaluate_charge.py  field.py  pseudocode.py
language/divisions/: blazon.py  per_bend.py  per_bend_sinister.py  per_chevron.py  per_cross.py  per_fess.py  per_nothing.py  per_pale.py  per_pall.py  per_saltire.py
language/program_data/: branch_manager.py  variable_manager.py
language/settings/: image_settings.py  settings.py
language/test/: cointoss.blzn  documentation.blzn  sample.blzn
presets/: assembled_views.py  default_output_config.json  preset_flag_collections.py  preset_flag_views.py  view_data_generator.py
rendering/: _image_management.py  _render_config.py  _util_images.py  assembler.py  charger.py  compositor.py  const.py  draw_blazon.py  draw_blazon_list.py  draw_division.py  draw_dof.py  old_main.py  trimmer.py  z_util_images.py
rendering/assets/: needs_flip.py
rendering/legacy_pipeline/: assembler.py  charger.py  compositor.py  old_main.py  trimmer.py
(+20 files in other folders)
