[tool.poetry]
name = "blazon-language"
version = "0.1.0"
description = "Interprets the Blazon Programming Language and generates the associated graphics."
authors = ["ac-he <98062893+ac-he@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pycairo = "^1.27.0"
pillow = "^11.0.0"
click = "^7.1.2"
tatsu = "5.12.1"

[tool.poetry.scripts]
blazon = "blazon_language.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
